@@ -1,3 +1,8 @@
+2000-05-16  Tristan Tarrant  <tarrant_tristan@emc.com>
+
+	* gamewin.cc: Load correct palettes for intro. Implement palette fade 
+	out/in
+
 2000-05-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* exult.cc: F4 toggles fullscreen (Windows & Linux)
 
